<resources>
    <string name="app_name">CS2340CTeam50Game</string>
    <string name="exitButtonText">Exit</string>
    <string name="startButtonText">Start</string>
    <string name="welcomeText">Generic Dungeon Crawler Game</string>
    <string name="difficulty_easy">Difficulty: Easy</string>
    <string name="difficulty_medium">Difficulty: Medium</string>
    <string name="difficulty_hard">Difficulty: Hard</string>
    <string name="player">Player</string>
    <string name="_100">100</string>
    <string name="difficulty">Difficulty:</string>
</resources>