<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:screenOrientation="landscape"
    tools:context=".OpeningScreen">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="522dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textColor="#FAF7F7"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/backButton"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/welcome_buttons"
        android:text="@string/exitButtonText"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/startButton"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/welcome_buttons"
        android:text="@string/startButtonText"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="58dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gt_overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>