<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:screenOrientation="landscape"
    tools:context=".OpeningScreen">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="650dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/gotham_ultra_italic"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textColor="#F8FBFBFB"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/exitButton"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/welcome_buttons"
        android:fontFamily="@font/carnero_bold"
        android:text="@string/exitButtonText"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <android.widget.Button
        android:id="@+id/startButton"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/welcome_buttons"
        android:fontFamily="@font/carnero_bold"
        android:text="@string/startButtonText"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="58dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gt_overlay" />

</androidx.constraintlayout.widget.ConstraintLayout>