<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:screenOrientation="landscape">

    <RelativeLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/gameMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

    </RelativeLayout>

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/player"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/healthValue"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/healthIcon"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/health_icon" />

    <TextView
        android:id="@+id/healthValue"
        android:layout_width="30dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/_100"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/healthIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="33dp"
        android:layout_height="12dp"
        android:layout_marginStart="25dp"
        android:text="@string/difficulty"
        android:textColor="#FFFFFF"
        android:textSize="20px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthIcon" />

    <TextView
        android:id="@+id/difficultySetting"
        android:layout_width="31dp"
        android:layout_height="12dp"
        android:layout_marginTop="9dp"
        android:text="Normal"
        android:textColor="#FFFFFF"
        android:textSize="20px"
        app:layout_constraintStart_toEndOf="@+id/difficultyText"
        app:layout_constraintTop_toBottomOf="@+id/healthValue" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="63dp"
        android:text="Score: "
        android:textColor="#FFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    =======

</androidx.constraintlayout.widget.ConstraintLayout>